--- a/src/main/resources/templates/start.html
+++ b/src/main/resources/templates/start.html
@@ -10,24 +10,23 @@
     <link th:href="@{/css/main.css}" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-         <div class="container">
+        <header>
+            <div class="container">
+                <div id="branding">
+                    <h1><span class="highlight">Welcome</span> to my Page</h1>
+                </div>
+                <nav>
+                    <ul>
+                        <li><a href="ausgabebmi.html">Home</a></li>
+                        <li><a href="ausgabebmi.html">ausgabe</a></li>
+                        <li><a href="contact.html">contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+        
 
-      <div class="jumbotron mt-4">
-        <h1 class="display-4">Willkommen auf meiner Startseite</h1>
-      </div>
-      <div class="container">
-          <div id="branding">
-              <h1><span class="highlight">Welcome</span> to my Page</h1>
-          </div>
-          <nav>
-              <ul>
-                  <li><a href="current">Home</a></li>
-                  <li><a href="ausgabebmi">bmi ausgabe</a></li>
-                  <li><a href="contact.html">contact</a></li>
-              </ul>
-          </nav>
-      </div>
-
+    
       <form th:action="@{/ausgabebmi}" method="POST"
              th:object="${item}">
                    
@@ -54,12 +53,18 @@
           <div class="mt-1 float-right">
                  <button type="submit" class="btn btn-primary">Berechne</button>
                 </div>     
-             
+        
          </form>
-     
+
          </div>
+         
+         
+
     <script th:src="@{/js/jquery-3.4.1.js}" type="text/javascript"></script>
     <script th:src="@{/js/popper.js}" type="text/javascript"></script>
     <script th:src="@{/js/bootstrap.js}" type="text/javascript"></script>             
     </body>
+    <footer>
+             <p>Copyright &copy; Dominque Mariacher <script>new Date().getFullYear()>2010&&document.write(+new Date().getFullYear());</script></p>
+         </footer>
 </html>
