--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -1,4 +1,7 @@
 header{
+  position: fixed;
+  width: 100%;
+  height: 90px;
   background:#35424a;
   color:#ffffff;
   padding-top: 30px;
@@ -10,39 +13,82 @@ header a{
   color: #ffffff;
   text-decoration: none;
   text-transform: uppercase;
-  font-size: 16px;
+  font-size: 17px;
 }
 
 header ul{
-  margin: 0;
-  padding: 0;
+  margin: 50;
+  padding: 50;
   }
 
 header li{
   float: left;
   display: inline;
-  padding: 0 40px 0 20px; 
+  margin: 0 40px 0 20px; 
  }
 
 header #branding{
 float:left;
+margin-top: 0px;
+padding-top: 0px;
 }
 
 header #branding h1{
-  margin: 0;
+  margin-top: 0px;
+  padding-top: 0px;
+  
   }
 
 header nav{
   float: right;
-  margin-top: 10px;
- }
+  margin-top: 0px;
+   }
 
 header .highlight, header .current a{
   color:#e8491d;
   font-weight: bold;
-  }
+  
+    }
 
 header a:hover{
-  color:#cccccc;
+  color:#e8491d;
   font-weight: bold;
   }
+  
+.form-control{     
+      position: center;
+      text-align: left;
+      width: 30%      
+  }
+        
+.form-group{
+    position: center; 
+    padding-top: 30px;
+        
+                
+        }
+body {
+  display: grid; 
+  grid-template-columns: repeat (3, 1fr);
+}
+        
+
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%
+}
+
+.footer {
+   height: 50px;   
+   padding-top: 10px;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   color:#ffffff;
+   background-color: #e8491d;
+   text
+   color: white;
+   text-align: center;   
+}
