--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,9 +8,7 @@
    <link th:href="@{/css/style.css}" rel="stylesheet" type="text/css"/>
    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" rel="stylesheet" type="text/css"/>
    <link th:href="@{/css/main.css}" rel="stylesheet" type="text/css"/>
-   <script th:src="@{/js/jquery-3.4.1.js}" type="text/javascript"></script>
-   <script th:src="@{/js/popper.js}" type="text/javascript"></script>
-   <script th:src="@{/js/bootstrap.js}" type="text/javascript"></script>
+   
    </head>
 <body data-spy="scroll" data-target="#navbarResponsive">
 <!--- Start Home Section --->
@@ -504,9 +502,10 @@ Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod 
 <!--- Ende Platzhalter3 Section --->
 
 </body>
-<!--<footer>
-  <p>Copyright &copy; Dominque Mariacher <script>new Date().getFullYear()>2000&&document.write(+new Date().getFullYear());</script></p>
-</footer> -->
+<div class="footer">
+        <p>Copyright &copy; Dominque Mariacher <script>new Date().getFullYear()>2010&&document.write(+new Date().getFullYear());</script></p>
+</div>
+</footer>
 
 <!-- Get in Contact
 name
