--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,7 +15,7 @@
 <div id="home">
     
  <!--- Navigation --->
- <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+ <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
      <a class="navbar-brand" href="#"><img th:src="@{/images/Logo_klein.png}" width="100" height ="100" alt="logo" class="image-block"></a>
      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
          <span class="navbar-toggler-icon"></span>
@@ -40,7 +40,7 @@
  </nav>
  
  <!--- Ende Navigation --->
- 
+
  <!--- Start Landing Page -->
  <div class="landing">
      <div class="home-wrap">     
@@ -501,11 +501,11 @@ Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod 
 </div>
 <!--- Ende Platzhalter3 Section --->
 
-</body>
+
+<!-- Footer -->
 <div class="footer">
-        <p>Copyright &copy; Dominque Mariacher <script>new Date().getFullYear()>2010&&document.write(+new Date().getFullYear());</script></p>
+   <p>Copyright &copy; Dominque Mariacher <script>new Date().getFullYear()>2010&&document.write(+new Date().getFullYear());</script></p>
 </div>
-</footer>
 
 <!-- Get in Contact
 name
