--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -1,93 +1,131 @@
 header{
-  position: fixed;
-  width: 100%;
-  height: 90px;
-  background:#35424a;
-  color:#ffffff;
-  padding-top: 20px;
-  min-height: 70px;
-  border-bottom: #e8491d 3px solid;
+
+    width: 100%;
+    height: 86px;
+    background:#35424a;
+    color:#ffffff;
+    padding-top: 20px;
+    min-height: 70px;
+    border-bottom: #e8491d 3px solid;
+    font-family: sans-serif;
 }
 
 header a{
-  color: #ffffff;
-  text-decoration: none;
-  text-transform: uppercase;
-  font-size: 17px;
+    color: #ffffff;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 17px;
 }
 
 header ul{
-  margin: 50;
-  padding: 50;
-  }
+    margin: 50px
+    padding: 50px
+}
 
 header li{
-  float: left;
-  display: inline;
-  margin: 0 40px 0 20px; 
- }
+    float: left;
+    display: inline;
+    margin: 0 40px 0 20px;
+    margin-top: 7.5px;
+    padding-top: 7.5px;
+}
 
 header #branding{
-float:left;
-margin-top: 0px;
-padding-top: 0px;
+    float:left;
+    margin-top: 0px;
+    padding-top: 0px;
 }
 
 header #branding h1{
-  margin-top: 0px;
-  padding-top: 0px;
-  
-  }
+    margin-top: 0px;
+    padding-top: 0px;
+
+}
 
 header nav{
-  float: right;
-  margin-top: 0px;
-   }
+    float: right;
+    margin-top: 0px;
+}
 
 header .highlight, header .current a{
-  color:#e8491d;
-  font-weight: bold;
-  
-    }
+    color:#e8491d;
+    font-weight: bold;
+
+
+}
 
 header a:hover{
-  color:#e8491d;
-  font-weight: bold;
-  }
-  
-.form-control{     
-      position: center;
-      text-align: left;
-      width: 30%      
-  }
-        
-.form-group{
-    position: center; 
-    padding-top: 30px;
-        
-                
-        }
-body {
-  display: grid; 
-  grid-template-columns: repeat (3, 1fr);
+    color:#e8491d;  
+    font-weight: bold;
+    transition: 0s;
 }
-        
+
+ul:hover li a
+{
+    transform: scale(1.5);
+    opacity: .2;
+    filter: blur(5px);
+}
+
+ul li a:hover
+{            
+    transform: scale(2);
+    opacity: 1;
+    filter: blur(0);    
+}
+
+
+.form-control{     
+    position: center;
+    text-align: left;
+    margin: 0 auto;
+    padding-top: 10px;
+    width: 30%;     
+}
+
+.container{
+    
+    text-align:center;
+    height: 100%;
+    padding-bottom: 10px;
+    font-family: sans-serif;
+   
+    margin-bottom: 5px;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+
+    justify-content: center;
+
+}
+
+.caption {
+    width: 100%;
+    max-width: 100%;
+    position: absolute;
+    top: 38%;
+}
+
 
 
 .sticky {
-  position: fixed;
-  top: 0;
-  width: 100%
+    position: fixed;
+    top: 0;
+    width: 100%
 }
 
+
+
 .footer {
-   height: 50px;   
-   padding-top: 10px;
-   left: 0;
-   bottom: 0;
-   width: 100%;
-   color:#ffffff;
-   background-color: #e8491d;
-   color: white;
-   text-align: center;   
+    height: 50px;   
+    padding-top: 10px;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    color:#ffffff;
+    background-color: #e8491d;
+    color: white;
+    text-align: center;   
 }
