--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -1,5 +1,10 @@
-header{
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
 
+
+header{   
+    position: fixed;
+    padding-left: 300px;
+    padding-right: 300px;
     width: 100%;
     height: 86px;
     background:#35424a;
@@ -7,19 +12,23 @@ header{
     padding-top: 20px;
     min-height: 70px;
     border-bottom: #e8491d 3px solid;
-    font-family: sans-serif;
+    font-family: 'Lato', sans-serif;
+    font-weight: 100;
+    overflow: hidden;
+    background-color: rgba(0,0,0,0.6)!important;
 }
 
 header a{
     color: #ffffff;
+    display:block;
     text-decoration: none;
     text-transform: uppercase;
     font-size: 17px;
+    
 }
 
 header ul{
-    margin: 50px
-    padding: 50px
+    
 }
 
 header li{
@@ -50,8 +59,6 @@ header nav{
 header .highlight, header .current a{
     color:#e8491d;
     font-weight: bold;
-
-
 }
 
 header a:hover{
@@ -84,19 +91,37 @@ ul li a:hover
 }
 
 .container{
-    
+    padding-left: 100px;
+    padding-right: 100px;
+    padding-top: 10px;
     text-align:center;
     height: 100%;
     padding-bottom: 10px;
-    font-family: sans-serif;
-   
+    font-family: sans-serif;   
     margin-bottom: 5px;
+}
+
+
+.weight:before{
+    position: absolute;
+    margin-top: 30px;
+    content:'';
+   
+}
+
+.weight{
+    padding-left: 100px;
+    padding-right: 100px;        
+    text-align: center;
+    height: 100%;    
+    padding-bottom: 10px;
+    font-family: sans-serif;   
+    margin-bottom: 5px;     
 }
 
 body {
     margin: 0;
     padding: 0;
-
     justify-content: center;
 
 }
@@ -107,7 +132,6 @@ body {
     position: absolute;
     top: 38%;
 }
-
 
 
 .sticky {
@@ -129,3 +153,4 @@ body {
     color: white;
     text-align: center;   
 }
+
