--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -1,29 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
 
-
-header{   /*NEW start*/
+header{   
+    position: fixed;    
     background: url(/images/Logo_klein3.png);
     background-repeat: no-repeat;
-    background-position:25% 20%;
-    background-size: contain;
-    
-    /*NEW end*/
-    
-    position: fixed;
-    
-    padding-left: 350px;
-    padding-right: 350px;
+    background-position:22% 18%;
+    background-size: contain;  
+    padding-left: 320px;
+    padding-right: 300px;
     width: 100%;
     height: 100px;    
     max-width: 100%;
     max-height: 100%;   
     color:#ffffff;    
     min-height: 70px;
-    border-bottom: #e8491d 3px solid;
+    border-bottom: #e8491d 3.5px solid;
     font-family: 'Lato', sans-serif;    
     overflow: hidden;
     background-color: rgba(0,0,0,0.80)!important;
 }
+
 
 header a{
     color: #ffffff;    
@@ -44,9 +40,9 @@ header ul{
 header li{    
     float: left;
     display: inline;
-    margin: 0 40px 0 20px;
+    margin: 0px 30px 0 20px;
     margin-top: 7.5px;
-    padding-top: 7.5px;
+    padding-top: 7.5px;   
 }
 
 header #branding{ 
@@ -57,7 +53,7 @@ header #branding{
     padding-bottom: 30px;
 }
 
-/*-- nicht in verwendung da Logo verwendet wird! --
+/*-- nicht in verwendung da ein Header Logo verwendet wird! --
 header #branding h1{
     margin-top: 0px;
     padding-top: 0px;
@@ -93,7 +89,6 @@ ul li a:hover
     opacity: 1;
     filter: blur(0);    
 }
-
 /* ende Hover */
 
 .form-control{
@@ -102,43 +97,45 @@ ul li a:hover
     text-align: left;
     margin: 0 auto;
     padding-top: 5px;
-    width: 25%;     
-}
+    width: 27%;     
+    }
 
 .container{
-    
+    color:white;
+    font-family: sans-serif; 
     padding-left: 65px;
     padding-right: 65px;
     padding-top: 20px;
     text-align:center;
     height: 100%;
-    padding-bottom: 20px;
-    font-family: sans-serif;   
+    padding-bottom: 20px;      
     margin-bottom: 5px;
 }
 
 /* Bmi Rechner Anfang */
-.weight{
-    
-    margin-bottom: 10px;
+.weight{  
+    font-family: sans-serif;
+    color:white;
+    font-size: 18px; 
+    margin-bottom: 15px;
     padding-left: 100px;
-    padding-right: 100px;        
-    text-align: center;
-    height: 80%;    
+    padding-right: 100px;   
     padding-bottom: 10px;
-    font-family: sans-serif;   
-    margin-bottom: 5px;     
+    text-align: center;
+    height: 80%;     
 }
-
 /* Bmi Rechner Ende */
 
 
 /* Body */
-body {    
-    margin: 0px;
-    padding: 0px;
-    justify-content: center;
+body {     
+  background: url(/images/Bike.Jpeg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;   
     }
+    
 
 
 /* unused
@@ -156,14 +153,14 @@ body {
 }
 unused ende */ 
 
-.footer {    
+.footer {        
     height: 50px;   
     padding-top: 10px;
     left: 0;
     bottom: 0;
     width: 100%;
     color:#ffffff;
-    background-color: #e8491d;
-    color: white;
-    text-align: center;      
+    background-color: #e8491d;    
+    font-weight: 500;
+    text-align: center;
 }
