--- a/src/main/resources/templates/ausgabebmi.html
+++ b/src/main/resources/templates/ausgabebmi.html
@@ -17,7 +17,7 @@
   
           <div class="row">
                 <div class="col-2">Bmi</div>
-                <div class="col text-right" th:text="${#numbers.formatDecimal(item.bmi,1,2)}"></div>
+                <div class="col text-right" th:text="${#numbers.formatDecimal(item.Bmi,1,2)}"></div>
             </div></br>
          
             <div class="row">
