--- a/src/main/resources/templates/start.html
+++ b/src/main/resources/templates/start.html
@@ -26,7 +26,6 @@
        <br><br><br><br><br>
         
         
-              
          <form th:action="@{/ausgabebmi}" method="POST"
              th:object="${item}">
                    
@@ -35,7 +34,7 @@
             <label for="titel"></label>
           <input th:field="*{groesse}"
                  type="text"
-                 placeholder="Bitte die Größe in Zentimeter angeben: (zb '177')"
+                 placeholder="Bitte die Größe in cm angeben (z.b. 177)"
                  class="form-control"
                  th:errorclass="is-invalid"/>
           <div th:if="${#fields.hasErrors('groesse')}" th:errors="*{groesse}" class="invalid-feedback"></div>
@@ -45,18 +44,18 @@
           <label for="titel">Gewicht</label>
           <input th:field="*{gewicht}"
                  type="text"
-                 placeholder="Bitte das Gewicht in Kilogramm angeben: (zb '80')"
+                 placeholder="Bitte das Gewicht in Kilogramm angeben (z.b. 80kg)"
                  class="form-control"
                  th:errorclass="is-invalid"/>
           <div th:if="${#fields.hasErrors('gewicht')}" th:errors="*{gewicht}" class="invalid-feedback"></div>
         </div> 
              
-          <div class="mt-1 text-center">
-                 <button class="btn btn-outline-orange">Berechne<i class="fas fa-weight pl-1"></i></button>
-                 </div>     
+          <div class="mt-1 text-center">                
+                 <button type="submit" class="btn btn-white">Berechne</i></button>
+          </div>     
         </form> 
         
-        
+          
         
        <div class="container"
         <p> Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.   
