--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -215,7 +215,18 @@ body {
   background-size: cover;   
     }
     
+.bmi {
+    padding-top: 25px;
+    width:auto;
+    height:auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 
+    }
+
+    
+    
 
 /* unused
 .caption {
