--- a/src/main/resources/static/css/ausgabe.css
+++ b/src/main/resources/static/css/ausgabe.css
@@ -1,128 +1,60 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
 
-header{   
-    position: fixed;    
-    background: url(/images/Logo_klein3.png);
-    background-repeat: no-repeat;
-    background-position:22% 18%;
-    background-size: contain;  
-    padding-left: 320px;
-    padding-right: 300px;
-    width: 100%;
-    height: 100px;    
-    max-width: 100%;
-    max-height: 100%;   
-    color:#ffffff;    
-    min-height: 70px;
-    border-bottom: #e8491d 3.5px solid;
-    font-family: 'Lato', sans-serif;    
-    overflow: hidden;
-    background-color: rgba(0,0,0,0.80)!important;
-}
 
-
-header a{
-    color: #ffffff;    
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 18px;        
-}
-
-header-brand{
-}
-
-header ul{    
-}
-
-header li{    
-    float: left;
-    display: inline;
-    margin: 0px 30px 0 20px;
-    margin-top: 7.5px;
-    padding-top: 7.5px;   
-}
-
-header #branding{ 
-    position: fixed;
-    float:left;
-    margin-top: -8.5px;
-    padding-top: 0px;
-    padding-bottom: 30px;
-}
-
-
-/*-- nicht in verwendung da ein Header Logo verwendet wird! --
-header #branding h1{
-    margin-top: 0px;
-    padding-top: 0px;
-}*/
-
-header nav{
-    padding-top: 20px;
-    float: right;    
-}
-
-header .highlight, header .current a{
-    color:#e8491d;
-    font-weight: bold;
-}
-
-/* Hover */
-header a:hover{
-    color:#e8491d;  
-    font-weight: bold;
-    transition: 0.25s;
-}
-
-ul:hover li a
-{
-    transform: scale(1.5);
-    opacity: .2;
-    filter: blur(5px);
-}
-
-ul li a:hover
-{            
-    transform: scale(2);
-    opacity: 1;
-    filter: blur(0);    
-}
-/* ende Hover */
-
-.form-control{
-    margin: 15px;
-    position: center;
-    text-align: left;
-    margin: 0 auto;
-    padding-top: 5px;
-    width: 27%;     
+.jumbotron{
+    text-align: center;
+    font-family: sans-serif;
+    font-size: 10px;
+    height:20%;
+    width: 25%;
+    padding: 20px;   
+    padding-right: 10px;
+    padding-top: 20px;  
+    margin-top:20px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 15px;
 }
 
 .container{
-    color:white;
+    height: 30%;
+    color: white;
     font-family: sans-serif; 
-    padding-left: 65px;
-    padding-right: 65px;
-    padding-top: 20px;
-    text-align:center;
-    height: 100%;
-    padding-bottom: 20px;      
-    margin-bottom: 5px;
+    padding-left: 450px;
+    padding-right: 420px;
+    padding-top: 10px;
+    padding-bottom: 5px; 
+    margin: 0 auto;
+    text-align:center;          
+   
+ }
+
+#container-border{
+    border-width: 3px;
+    border-style: solid;
+    border-color: white;
 }
 
-/* Bmi Rechner Anfang */
-.weight{  
-    font-family: sans-serif;
-    color:white;
-    font-size: 18px; 
+.table{
+    height: 60%;
+    width: 50%;
+    color: black;
+    font-family: sans-serif; 
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-top: 50px;
+    padding-bottom: 15px; 
+    text-align:center;
+    margin: 0 auto;
     margin-bottom: 15px;
-    padding-left: 100px;
-    padding-right: 100px;   
-    padding-bottom: 10px;
-    text-align: center;
-    height: 80%;     
+    
+    background-color: rgba(255, 255, 255, 0.5);
+    overflow-x: auto;
+    overflow-y: auto;
+    overflow-style: auto;
+    
+    
 }
-/* Bmi Rechner Ende */
 
 .buttons > div {
     width: calc(50% - 40px);
@@ -161,6 +93,7 @@ input[type="submit"]{
     -ms-transition: all .4s ease-in-out;
     -o-transition: all .4s ease-in-out;
     transition: all .4s ease-in-out;
+
 }
 
 .btn:hover,
@@ -217,39 +150,31 @@ body {
     padding-top: 25px;
     width:35%;
     height:35%;
-    display: block;
     margin-left: auto;
     margin-right: auto;
+    display:flex;
+    margin-bottom: 25px;
 }
 
-body #graph {
-    padding-top: 25px;
-    width:100%;
-    height:100%;
-    display: block;
+#box {
+    padding-top: 15px;
     margin-left: auto;
     margin-right: auto;
-    color: white;
-}
-
-body #calendar{
-    color: black;
-    background-color: rgba(255, 255, 255, 0.5);
-    width:55%;
-    height:55%;
-    margin-left: auto;
-    margin-right: auto;
+    border: 3px solid white;
+    height: 100px;
+    width: 270px;
+    
 }
 
 
-.footer {        
+.footer {
     height: 50px;   
     padding-top: 10px;
     left: 0;
     bottom: 0;
     width: 100%;
     color:#ffffff;
-    background-color: #e8491d;    
-    font-weight: 500;
-    text-align: center;
+    background-color: #e8491d;
+    color: white;
+    text-align: center;   
 }
