--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -26,7 +26,7 @@ color: #505962;
     text-transform: uppercase;
     font-weight: 700;
     font-size: .9rem;
-    letter-spacing: .1rem;
+    letter-spacing: .1rem;}
    /* background-color: (0,0,0,0.6)!important;/*
     position:fixed;
         top:0;
