--- a/src/main/resources/templates/ausgabebmi.html
+++ b/src/main/resources/templates/ausgabebmi.html
@@ -9,6 +9,9 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" rel="stylesheet" type="text/css"/>
         <link th:href="@{/css/main.css}" rel="stylesheet" type="text/css"/>
 
+        <script th:src="@{/js/plotly-latest.min.js}"></script>
+        <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+
         <script th:src="@{/js/jquery-3.4.1.js}" type="text/javascript"></script>
         <script th:src="@{/js/popper.js}" type="text/javascript"></script>
         <script th:src="@{/js/bootstrap.js}" type="text/javascript"></script>
@@ -48,25 +51,37 @@
             <img th:src="@{/images/bmi-grafik.png}" alt="logo" th:class="bmi">
         </p>  
 
-        <!-- Tabelle -->
+        <!-- Table -->
         <table class = "table">
             <thead>
                 <tr>
+                    <th>Datum & Uhrzeit</th>                    
                     <th>Größe (in cm)</th>
                     <th>Gewicht (in kg)</th>
                     <th>Body Mass Index (BMI)</th>
+
                 </tr>
             </thead>
             <tbody>            
-                <tr th:each="bmi: ${bmis}">
+                <tr th:each="bmi: ${bmis}">                    
+                    <td th:text="${#temporals.format(bmi.tageszeit, 'dd.MM.yyyy - HH:mm')}"></td>
                     <td th:text="${#numbers.formatDecimal(bmi.groesse,1,0)}"></td>
                     <td th:text="${#numbers.formatDecimal(bmi.gewicht,1,0)}"></td>
                     <td th:text="${#numbers.formatDecimal(bmi.Bmi,1,2)}"></td>
+
+
+                    <td class="action">
+                        <a th:href="'delete?id=' + ${bmi.id}"<i class="far fa-trash-alt"></i></a>
+
+                    </td>
                 </tr>
             </tbody>
         </table>
-        
-        
+        <!-- Table end -->
+
+        <!-- Graph -->
+
+
         <div class="footer">
             <p>Copyright &copy; Dominque Mariacher <script>new Date().getFullYear() > 2010 && document.write(+new Date().getFullYear());</script></p>
         </div>
