--- a/src/main/resources/templates/bmi_created.html
+++ b/src/main/resources/templates/bmi_created.html
@@ -5,6 +5,6 @@
     <title>User wurde erstellt</title>
 </head>
 <body>
-<p>Ein neuer Benutzer wurde erstellt.</p>
+<p>Ein neuer Bmi wurde erstellt.</p>
 </body>
 </html>
