--- a/src/main/resources/templates/start.html
+++ b/src/main/resources/templates/start.html
@@ -9,19 +9,25 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" rel="stylesheet" type="text/css"/>
         <link th:href="@{/css/main.css}" rel="stylesheet" type="text/css"/>
         <link th:href="@{/css/Fullcalendar/core_main.min.css}" rel="stylesheet" type="text/css"/>
+        <link th:href="@{/css/Fullcalendar/core/main.css}" rel="stylesheet" type="text/css"/>
         <link th:href="@{/css/Fullcalendar/daygrid_main.min.css}" rel="stylesheet" type="text/css"/> 
         <link th:href="@{/css/Fullcalendar/bootstrap_main.min.css}" rel="stylesheet" type="text/css"/>
         <link th:href="@{/css/Fullcalendar/timegrid_main.min.css}" rel="stylesheet" type="text/css"/>
-        
-        
+        <link th:href="@{/css/Fullcalendar/list/main.min.css}" rel="stylesheet" type="text/css"/>
+        <link th:href="@{/css/Fullcalendar/list/main.css}" rel="stylesheet" type="text/css"/>
+
         <script th:src="@{/js/jquery-3.4.1.js}" type="text/javascript"></script>
         <script th:src="@{/js/popper.js}" type="text/javascript"></script>
         <script th:src="@{/js/bootstrap.js}" type="text/javascript"></script> 
         <script th:src="@{/js/echarts.min.js}"></script>
-        <script th:src="@{/js/Fullcalendar/core_main.min.js}"></script>
-       <script th:src="@{/js/Fullcalendar/daygrid_main.min.js}"></script>
+        
+        <script th:src="@{/js/Fullcalendar/core/main.min.js}"></script>
+        <script th:src="@{/js/Fullcalendar/daygrid_main.min.js}"></script>
         <script th:src="@{/js/Fullcalendar/timegrid_main.min.js}"></script>
+        <script th:src="@{/js/Fullcalendar/list/main.min.js}"></script>
         <script th:src="@{/js/Fullcalendar/bootstrap_main.min.js}"></script>
+
+               
     </head>
     <body>
         <header>            
@@ -31,7 +37,7 @@
             <nav>
                 <ul>
                     <li><a href="#">Home</a></li>
-                    <li><a href="@{/ausgabebmi.html}">Ausgabe</a></li>
+                    <li><a th:href="@{/ausgabebmi}">Ausgabe</a></li>
                     <li><a href="#">contact</a></li>
                 </ul>
             </nav>
@@ -51,7 +57,7 @@
                    placeholder="Bitte die Größe in cm angeben (z.b. 177)"
                    class="form-control"
                    th:errorclass="is-invalid"/>
-            <div th:if="${#fields.hasErrors('groesse')}" th:errors="*{groesse}" class="invalid-feedback"></div>
+            <div th:if="${#fields.hasErrors('groesse')}" th:errors="*{groesse}"></div>
         </div>            
 
         <div class="weight">
@@ -68,58 +74,89 @@
             <button type="submit" class="btn btn-white">Berechne</button>
         </div>     
     </form>
-
-    <p>
+    <br><</br>
+    <!--<p>
         <img th:src="@{/images/bmi-grafik.png}" alt="logo" th:class="bmi">
-    </p>
+    </p> -->
     
     <div id="calendar">
-        <script>
-
+          
+        <script type='text/javascript'>
+    
+    
             document.addEventListener('DOMContentLoaded', function() {
             var calendarEl = document.getElementById('calendar');
 
             var calendar = new FullCalendar.Calendar(calendarEl, {
-            plugins: [ 'dayGrid', 'bootstrap' ]
-            });
+            plugins: [ 'dayGrid', 'timeGrid' , 'list'],  
+            header: {
+                left:'prev,next today',
+                center:'title',
+                right:'dayGridMonth,timeGridWeek,list',                
+            },
+            buttonText:{
+                today: 'Heute',
+                month: 'Monat',
+                week: 'Woche',
+                list: 'Liste',                
+            },
+             events: [
+    {
+         title: 'Meeting',
+        start: '2020-06-01T14:30:00',
+        extendedProps: {
+        status: 'done'
+      }
+    },
+    {
+      title: 'Birthday Party',
+      start: '2020-06-04T07:00:00',
+      backgroundColor: 'green',
+      borderColor: 'green'
+    }
+  ],
+  eventRender: function(info) {
+    if (info.event.extendedProps.status === 'done') {
+
+      // Change background color of row
+      info.el.style.backgroundColor = 'red';
+
+      // Change color of dot marker
+      var dotEl = info.el.getElementsByClassName('fc-event-dot')[0];
+      if (dotEl) {
+        dotEl.style.backgroundColor = 'white';
+      }
+    }
+  },
+     eventClick: function(info) {
+    alert('Event: ' + info.event.title);
+    alert('Coordinates: ' + info.jsEvent.pageX + ',' + info.jsEvent.pageY);
+    alert('View: ' + info.view.type);
+
+    // change the border color just for fun
+    info.el.style.borderColor = 'red';
+  },
+
+  deleventClick: function(info) {
+    info.jsEvent.preventDefault(); // don't let the browser navigate
+
+    if (info.event.url) {
+      window.open(info.event.url);
+    }
+  }
+          
+             });
+
 
             calendar.render();
             });
-
         </script>
+
+
+
     </div>
-    
-    
-      <br>
-    <!-- prepare a DOM container with width and height -->
-    <div id="graph" style="width: 600px;height:400px;"></div>
-    <script type="text/javascript">
-        // based on prepared DOM, initialize echarts instance
-        var myChart = echarts.init(document.getElementById('graph'));
-
-        // specify chart configuration item and data
-        var option = {
-        title: {
-        text: 'ECharts entry example'
-        },
-        tooltip: {},
-        legend: {
-        data:['Sales']
-        },
-        xAxis: {
-        data: ["shirt","cardign","chiffon shirt","pants","heels","socks"]
-        },
-        yAxis: {},
-        series: [{
-        name: 'Sales',
-        type: 'bar',
-        data: [5, 20, 36, 10, 10, 20]
-        }]
-        };
-
-        // use configuration item and data specified to show chart
-        myChart.setOption(option);
-    </script>
+    <br>
+  
 
 
 
@@ -149,27 +186,7 @@
             Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.   
 
             Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis.   
-
-            At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, At accusam aliquyam diam diam dolore dolores duo eirmod eos erat, et nonumy sed tempor et et invidunt justo labore Stet clita ea et gubergren, kasd magna no rebum. sanctus sea sed takimata ut vero voluptua. est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.   
-
-            Consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus.   
-
-            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.   
-
-            Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.   
-
-            Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.   
-
-            Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.   
-
-            Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis.   
-
-            At vero eos et accusam et justo duo 
-            At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, At accusam aliquyam diam diam dolore dolores duo eirmod eos erat, et nonumy sed tempor et et invidunt justo labore Stet clita ea et gubergren, kasd magna no rebum. sanctus sea sed takimata ut vero voluptua. est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.   
-
-            Consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus.   
-
-            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam eta </a>
+            numy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam eta </a>
     </div>  
 
 
